Fixed one little issue with css: Main toggle panels need to have padding of 1ex all around when contracted, so it is necessary tht the toggle_panel_top element that is visible at that time has no margin.

--- a/trunk/css/filingcabinet-default.css
+++ b/trunk/css/filingcabinet-default.css
@@ -130,6 +130,10 @@ div.main_toggle_panel div.toggle_panel_top:first-child {
     margin-bottom: 1ex;
 }
 
+div.reduced_margin div.toggle_panel_top:first-child {
+    margin-bottom: 0px;
+}
+
 #login_panel {
     clear: left;
 }
